--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,19 @@
-[pytest]
-testpaths = src tests
-python_files = test_*.py
+﻿[pytest]
+testpaths =
+    tests
+    orchestration/tests
+    PrimeEngineAI/tests
+    FactorEngine/tests
+    QuantumHash/tests
+    gpu_sieve/tests
+    remainder_analysis/tests
+    primality_test/tests
+
+env =
+    PYTHONPATH=.
+    PYTHONPATH=PrimeEngineAI\src
+    PYTHONPATH=FactorEngine\src
+    PYTHONPATH=QuantumHash\src
+    PYTHONPATH=gpu_sieve\src
+    PYTHONPATH=remainder_analysis\src
+    PYTHONPATH=primality_test\src
