--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -9,7 +9,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0        # ← ensures a full clone so we can push
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -28,4 +31,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: site
+          publish_dir: ./site
+          user_name: 'github-actions[bot]'                   # ← explicit git identity
+          user_email: 'github-actions[bot]@users.noreply.github.com'
