--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -6,7 +6,7 @@ on:
 
 permissions:
   contents: read    # for checkout
-  pages: write      # for Pages deployment
+  pages: write      # for deploy
   id-token: write   # for deploy-pages
 
 jobs:
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # full history for artifact upload
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -31,8 +31,9 @@ jobs:
       - name: Build site
         run: mkdocs build --site-dir site
 
-      - name: Upload site artifact
-        uses: actions/upload-pages-artifact@v1
+      - name: Upload Pages Artifact
+        # v3 is required because v2 used upload-artifact@v3 under‑the‑hood (now deprecated) :contentReference[oaicite:3]{index=3}
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./site
 
@@ -44,4 +45,5 @@ jobs:
       id-token: write
     steps:
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v1
+        # v4 is the current supported deploy action for Pages :contentReference[oaicite:4]{index=4}
+        uses: actions/deploy-pages@v4
