--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,22 +1,30 @@
-name: Deploy Docs
+name: Deploy MkDocs site
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install mkdocs mkdocs-material
-      - name: Deploy MkDocs site
-        run: mkdocs gh-deploy --force
+          pip install mkdocs mkdocs-material mkdocs-link-check
+
+      - name: Check links
+        run: mkdocs link-check
+
+      - name: Build & deploy
+        run: mkdocs gh-deploy --force --clean
         env:
-          GH_TOKEN: \${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
