Finalize docs and deploy updates

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,21 @@
 site_name: ExoSuite
+nav:
+  - Home: index.md
+  - Engines:
+      - PrimeEngineAI: primeengineai/index.md
+      - FactorEngine: factorengine/index.md
+      - QuantumHash: quantumhash/index.md
+  - Blueprint: blueprint/index.md
+  - Architectural Guide: architectural_guide/index.md
+  - Changelog: changelog/index.md
+  - Contributing: contributing/index.md
+  - Developer Guide: developer_guide/index.md
+  - Formulas: formulas/index.md
+  - Glossary: glossary/index.md
+  - ML Methods: ml_methods/index.md
+  - Spec: spec/index.md
+  - Status Dashboard: status_dashboard/index.md
+  - WBS: wbs/index.md
 theme:
   name: material
 
@@ -9,19 +26,3 @@ site_dir: site
 extra_css:
   - assets/stylesheets/extra.css
 
-nav:
-  - Home: index.md
-  - Blueprint: BLUEPRINT.md
-  - Architecture Guide: architectural_guide.md
-  - Developer Guide: developer_guide.md
-  - Specification: spec.md
-  - Status Dashboard: status_dashboard.md
-  - FactorEngine: factorengine.md
-  - Formulas: formulas.md
-  - ML Methods: ml_methods.md
-  - PrimeEngineAI: primeengineai.md
-  - QuantumHash: quantumhash.md
-  - Changelog: changelog.md
-  - Contributing: contributing.md
-  - Glossary: glossary.md
-  - Work Breakdown: wbs.md
