--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,6 @@
-[tool.pytest.ini_options]
-pythonpath = [
-  ".",
-  "src"
-]
-addopts = [
-  "--import-mode=importlib"
-]
+[tool.black]
+line-length = 88
+
+[tool.mypy]
+python_version = 3.11
+ignore_missing_imports = true
