--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -1,34 +1,23 @@
-﻿name: Python CI
+name: Python CI
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: windows-latest
-
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
-      - name: Install dependencies
+      - name: Install dev dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
-
+          pip install black flake8  # in case not in requirements.txt
       - name: Lint with Black & Flake8
         run: |
           black --check .
           flake8 .
-
-      - name: Run tests
-        run: |
-          pytest --maxfail=1 --disable-warnings -q
+      - name: Run Unit Tests
+        run: pytest
