--- a/pytest.ini
+++ b/pytest.ini
@@ -1,12 +1,4 @@
 [pytest]
-minversion = 6.0
-addopts = -ra -q
+addopts = -ra
 testpaths =
     orchestration/tests
-python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
-filterwarnings =
-    ignore::DeprecationWarning
-    ignore::PendingDeprecationWarning
-    ignore::UserWarning
