--- a/pytest.ini
+++ b/pytest.ini
@@ -2,11 +2,7 @@
 minversion = 6.0
 addopts = -ra -q
 testpaths =
-    ExoSuite/orchestration/tests
-    ExoSuite/primality_test/tests
-    ExoSuite/gpu_sieve/tests
-    ExoSuite/factor_analysis/tests
-    ExoSuite/tests
+    orchestration/tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
