--- a/pytest.ini
+++ b/pytest.ini
@@ -1,19 +1,12 @@
-﻿[pytest]
+[pytest]
+minversion = 6.0
+addopts = -ra -q
 testpaths =
-    tests
     orchestration/tests
-    PrimeEngineAI/tests
-    FactorEngine/tests
-    QuantumHash/tests
-    gpu_sieve/tests
-    remainder_analysis/tests
-    primality_test/tests
-
-env =
-    PYTHONPATH=.
-    PYTHONPATH=PrimeEngineAI\src
-    PYTHONPATH=FactorEngine\src
-    PYTHONPATH=QuantumHash\src
-    PYTHONPATH=gpu_sieve\src
-    PYTHONPATH=remainder_analysis\src
-    PYTHONPATH=primality_test\src
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+    ignore::UserWarning
