--- a/pytest.ini
+++ b/pytest.ini
@@ -1,12 +1,3 @@
 [pytest]
-minversion = 6.0
-addopts = -ra -q
-testpaths =
-    orchestration/tests
-python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
-filterwarnings =
-    ignore::DeprecationWarning
-    ignore::PendingDeprecationWarning
-    ignore::UserWarning
+addopts = -ra
+testpaths = tests
