--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -1,40 +1,25 @@
 name: Python CI
-
 on: [push, pull_request]
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.9','3.10','3.11']
-
+  test:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-dev.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.x"
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
-          pip install --editable .
+          python -m pip install --upgrade pip
+          pip install -e .
           pip install -r requirements-dev.txt
-      - name: Run pre-commit hooks
-        run: pre-commit run --all-files --show-diff-on-failure
-      - name: Sort imports
-        run: isort --check-only .
       - name: Format check
         run: black --check .
+      - name: Import sort check
+        run: isort --check-only .
       - name: Lint
         run: flake8 src/ tests/
-      - name: Test
+      - name: Run tests
         run: pytest --maxfail=1 --disable-warnings -q
